[package]
name = "mfte-rs"
version = "0.1.0"
edition = "2024"
authors = ["RiceaRaul"]
description = "Cross-platform NTFS file system artifact parser written in Rust"
license = "MIT"
keywords = ["ntfs", "mft", "forensics", "parser", "cross-platform"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
# Command line parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Binary data parsing
nom = "7.1"
byteorder = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# File I/O and utilities
memmap2 = "0.9"
hex = "0.4"

# Cross-platform path handling
path-absolutize = "3.1"

# Optional: Progress reporting for large files
indicatif = { version = "0.17", optional = true }

[features]
default = ["progress"]
progress = ["indicatif"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "mfte-rs"
path = "src/main.rs"
